--- a/html/redirect.html
+++ b/html/redirect.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SAMPLE APP</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="/favicon.png" sizes="16x16 24x24 32x32 48x48 64x64"/>
+  <title>2</title>
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="icon" type="image/png" href="../images/favicon.png" sizes="16x16 24x24 32x32 48x48 64x64"/>
 </head>
 <body>
-  <button id="btn">BUTTON</button>
+  <button id="btn2" onclick="btn2()">認証</button>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="./script.js"></script>
+  <script src="../javascripts/script.js"></script>
 </body>
 </html>
