output user info in view.

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/png" href="../images/favicon.png" sizes="16x16 24x24 32x32 48x48 64x64"/>
 </head>
 <body>
+  <div id="output"></div>
   <button id="btn1" onclick="btn1()">LINE ログイン画面を表示</button>
   <script src="../javascripts/script.js"></script>
 </body>
