--- a/html/redirect.html
+++ b/html/redirect.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/png" href="../images/favicon.png" sizes="16x16 24x24 32x32 48x48 64x64"/>
 </head>
 <body>
+  <div id="output"></div>
   <button id="btn2" onclick="btn2()">認証</button>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="../javascripts/script.js"></script>
