--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="../css/style.css">
   <link rel="icon" type="image/png" href="../images/favicon.png" sizes="16x16 24x24 32x32 48x48 64x64"/>
 </head>
-<body>
-  <div id="output"></div>
+<body id="output">
   <button id="btn1" onclick="btn1()">LINE ログイン画面を表示</button>
   <script src="../javascripts/script.js"></script>
 </body>
