--- a/html/redirect.html
+++ b/html/redirect.html
@@ -12,5 +12,6 @@
   <button id="btn2" onclick="btn2()">認証</button>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="../javascripts/script.js"></script>
+  <script src="../javascripts/redirect.js"></script>
 </body>
 </html>
