--- a/html/throw.html
+++ b/html/throw.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1</title>
+  <title>throw</title>
   <link rel="stylesheet" href="../css/style.css">
   <link rel="icon" type="image/png" href="../images/favicon.png" sizes="16x16 24x24 32x32 48x48 64x64"/>
 </head>
 <body>
-  <button id="btn1" onclick="btn1()">LINE ログイン画面を表示</button>
-  <button id="btn3" onclick="btn3()">リダイレクトで表示</button>
+  throw
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="../javascripts/script.js"></script>
+  <script src="../javascripts/throw.js"></script>
 </body>
 </html>
